@@ -35,7 +35,7 @@ static void publish_refresher_listener ( const belle_sip_refresher_t* refresher
 	}
 }
 /*presence publish */
-int sal_publish_presence(SalOp *op, const char *from, const char *to, SalPresenceModel *presence){
+int sal_publish_presence(SalOp *op, const char *from, const char *to, int expires, SalPresenceModel *presence){
 	belle_sip_request_t *req=NULL;
 	if(!op->refresher || !belle_sip_refresher_get_transaction(op->refresher)) {
 		if (from)
@@ -47,13 +47,13 @@ int sal_publish_presence(SalOp *op, const char *from, const char *to, SalPresenc
 		req=sal_op_build_request(op,"PUBLISH");
 		belle_sip_message_add_header(BELLE_SIP_MESSAGE(req),belle_sip_header_create("Event","presence"));
 		sal_add_presence_info(op,BELLE_SIP_MESSAGE(req),presence);
-		return sal_op_send_and_create_refresher(op,req,600,publish_refresher_listener);
+		return sal_op_send_and_create_refresher(op,req,expires,publish_refresher_listener);
 	} else {
 		/*update presence status*/
 		const belle_sip_client_transaction_t* last_publish_trans=belle_sip_refresher_get_transaction(op->refresher);
 		belle_sip_request_t* last_publish=belle_sip_transaction_get_request(BELLE_SIP_TRANSACTION(last_publish_trans));
 		sal_add_presence_info(op,BELLE_SIP_MESSAGE(last_publish),presence);
-		return belle_sip_refresher_refresh(op->refresher,BELLE_SIP_REFRESHER_REUSE_EXPIRES);
+		return belle_sip_refresher_refresh(op->refresher,expires);
 	}
 }
 
